# homepage

./: .gitignore  .gitmodules  Aptfile  Cargo.toml  Procfile  build.rs  clean.sh  rust-toolchain
src/: main.rs
statics/: index.html.tera  page.html.tera  resume.html.tera  style.css
statics/etc/: minutes_writeup.html.tera
