[package]
name = "homepage"
version = "0.1.0"
authors = ["Asa Zeren <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"


[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["serve"]

[build-dependencies]
tera = "1"